@@ -56,6 +56,8 @@ The value is expressed in megabytes.
 .It Fl \-timeout Ar TIMEOUT
 time to wait before cancelling connection.
 The value is expressed in seconds.
+.It Fl \-cache-validity CACHE_VALIDITY
+Maximum age (in second) of the cached version before redownloading a new version.
 .El
 .
 .Sh EXIT STATUS
