@@ -39,6 +39,8 @@ path to the file or URL to open.
 Show a help message and exit
 .It Fl \-mode Ar MODE
 MODE to use to render to choose between normal (default), full or source
+.It Fl \-cache-validity CACHE_VALIDITY
+Maximum age (in second) of the cached version before redownloading a new version.
 .El
 .
 .Sh EXIT STATUS
